<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/black"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="River Island"
            android:textColor="@android:color/white"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:layout_gravity="center"
            />

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:id="@+id/top_bar"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_below="@+id/my_toolbar">

        <RelativeLayout
            android:id="@+id/top_bar_info"
            android:layout_width="0dp"
            android:layout_height="72dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/category_view"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginRight="16dp"
                android:layout_weight="1"
                android:gravity="bottom"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="#292929"
                android:text="@string/dresses"/>

            <TextView
                android:id="@+id/items_count"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_below="@+id/category_view"
                android:layout_marginRight="16dp"
                android:layout_weight="1"
                android:gravity="top"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="#393939"
                android:text="@string/ItemsCount" />

        </RelativeLayout>

        <ImageButton
            android:id="@+id/arrow"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:background="@drawable/ic_grid_on_black_18dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/grid_button" />

    </LinearLayout>

    <ListView
        android:id="@+id/list"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@null"
        android:dividerHeight="0dp"
        android:layout_below="@id/top_bar"/>

    <!-- Empty view is only visible when the list has no items. -->
    <TextView
        android:id="@+id/empty_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textAppearance="?android:textAppearanceMedium"/>

    <!-- Loading indicator is only shown before the first load -->
    <ProgressBar
        android:id="@+id/loading_indicator"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"/>

</RelativeLayout>