<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/main_river"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/adults"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true">

            <android.support.v7.widget.Toolbar
                android:id="@+id/my_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@android:color/black"
                android:elevation="4dp"
                android:theme="@style/ThemeOverlay.AppCompat.ActionBar">

                <TextView
                    android:id="@+id/toolbar_title"
                    style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="River Island"
                    android:textColor="@android:color/white" />

            </android.support.v7.widget.Toolbar>


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="500dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/main_nav"
                android:scaleType="centerCrop"
                android:src="@drawable/main_background"
                tools:layout_editor_absoluteX="0dp" />

            <LinearLayout
                android:id="@+id/main_nav"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/my_toolbar"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/nav_women"
                    style="@style/Widget.AppCompat.ActionButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:text="@string/women"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/nav_men"
                    style="@style/Widget.AppCompat.ActionButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:text="@string/men"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/nav_boys"
                    style="@style/Widget.AppCompat.ActionButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:text="@string/boys"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/nav_girls"
                    style="@style/Widget.AppCompat.ActionButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:text="@string/girls"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

            </LinearLayout>

            <Button
                android:id="@+id/women"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="72dp"
                android:layout_marginStart="72dp"
                android:text="@string/women"
                android:textAlignment="center" />

            <Button
                android:id="@+id/men"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="72dp"
                android:layout_marginRight="72dp"
                android:text="@string/men"
                android:textAlignment="center" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:layout_below="@+id/adults">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/main_background"
                android:scaleType="centerCrop"
                android:src="@drawable/kids_background"
                tools:layout_editor_absoluteX="0dp" />

            <Button
                android:id="@+id/girls"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="72dp"
                android:layout_marginStart="72dp"
                android:text="@string/girls"
                android:textAlignment="center" />

            <Button
                android:id="@+id/boys"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="72dp"
                android:layout_marginRight="72dp"
                android:text="@string/boys"
                android:textAlignment="center" />

        </RelativeLayout>

    </RelativeLayout>

</ScrollView>






